[package]
name = "wb_sqlite"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Derive map of struct/field to SQLite table/column. Generate const/fn for create-table, insert, select, update."
repository = "https://github.com/wbcat/wb_sqlite"
license = "MIT OR Apache-2.0"
keywords = ["database", "derive", "orm", "sqlite"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.11.0"
virtue = "0.0.19"

[dev-dependencies]
# sqlx 0.8.6 needs rusqlite 0.32.1
rusqlite = { version = "0.32.1", features = ["bundled"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
